# MCS_Sharepoint_List

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  interact_mcp.py  main.py  plan.md  pyproject.toml  setup_azure_auth.sh  sharepoint-list-search-mcp-spec.md
src/: config.py  scheduler.py  security_trimming.py  server.py
src/pipeline/: chunker.py  embedder.py
src/sharepoint/: client.py
src/store/: zvec_store.py
src/tools/: discover.py  ingest.py  manage.py  search.py
test-data/: vector_search_test_data.csv  vector_search_test_plan.md
tests/: conftest.py  test_chunker.py  test_e2e.py  test_integration.py
